--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-previewer",
-  "homepage": "https://janreggie.github.io/markdown-previewer/",
+  "homepage": "https://janreggie.github.io/markdown-previewer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/scriptjs": "^0.0.2",
     "bootstrap": "^4.5.2",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
